src/KeyCloak/kubernetes/angular-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: angular
  name: angular
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: angular
  template:
    metadata:
      labels:
        io.kompose.network/externo: "true"
        io.kompose.service: angular
    spec:
      containers:
      - image: angularkeycloak
        name: angularkeycloak
        ports:
        - containerPort: 80
      restartPolicy: Always
status: {}
