src/KeyCloak/kubernetes/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  template:
    metadata:
      labels:
        io.kompose.network/base: "true"
        io.kompose.network/externo: "true"
        io.kompose.service: api
    spec:
      containers:
      - env:
        - name: ASPNETCORE_ENVIRONMENT
          value: Development
        - name: BaseAuthUrl
          value: http://keycloak.localhost
        image: api
        name: samplekeycloakapi
        ports:
        - containerPort: 80
      restartPolicy: Always
