src/KeyCloak/kubernetes/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/base: "true"
        io.kompose.service: db
    spec:
      containers:
      - env:
        - name: ACCEPT_EULA
          value: Y
        - name: MSSQL_DATABASE
          value: db01
        - name: MSSQL_DATABASE_COLLATE
          value: SQL_Latin1_General_CP1_CI_AI
        - name: MSSQL_PASSWORD
          value: myPa55W0d
        - name: MSSQL_PID
          value: Express
        - name: MSSQL_USER
          value: myUser
        - name: SA_PASSWORD
          value: Mudar12345
        image: correia97/mssql-server-linux:2019-latest
        name: samplekeycloakdb
        volumeMounts:
        - mountPath: /var/opt/mssql/data
          name: dbdata
        - mountPath: /var/opt/mssql/log
          name: dblog
        - mountPath: /var/opt/mssql/secrets
          name: dbsecrets
      restartPolicy: Always
      volumes:
      - name: dbdata
        persistentVolumeClaim:
          claimName: dbdata
      - name: dblog
        persistentVolumeClaim:
          claimName: dblog
      - name: dbsecrets
        persistentVolumeClaim:
          claimName: dbsecrets
