src/KeyCloak/kubernetes/angular-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: angular
  name: angular
spec:
  ports:
  - name: "4200"
    port: 4200
    targetPort: 80
  selector:
    io.kompose.service: angular
  externalIPs:
    - 192.168.0.143
