src/KeyCloak/kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: api
  name: api
spec:
  ports:
  - name: "8081"
    port: 8081
    targetPort: 80
  selector:
    io.kompose.service: api
  externalIPs:
    - 192.168.0.220
