src/KeyCloak/kubernetes/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  ports:
  - name: "8088"
    port: 8088
    targetPort: 8080
  - name: "9099"
    port: 9099
    targetPort: 9090
  selector:
    io.kompose.service: keycloak
  externalIPs:
    - 192.168.0.143
