src/KeyCloak/kubernetes/mvc-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: mvc
  name: mvc
spec:
  ports:
  - name: "8085"
    port: 8085
    targetPort: 80
  selector:
    io.kompose.service: mvc
  externalIPs:
    - 192.168.0.143
