src/KeyCloak/kubernetes/base-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: base
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/base: "true"
  podSelector:
    matchLabels:
      io.kompose.network/base: "true"
