src/KeyCloak/kubernetes/externo-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: externo
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/externo: "true"
  podSelector:
    matchLabels:
      io.kompose.network/externo: "true"
